--- a/package.json
+++ b/package.json
@@ -8,16 +8,14 @@
     "cli-spinner": "^0.2.5",
     "find-config": "^1.0.0",
     "github": "^1.4.0",
-    "glob": "^7.0.5",
     "inquirer": "^1.0.3",
-    "look-up": "^0.8.3",
     "open": "0.0.5",
     "parse-git-config": "^0.4.2",
     "superagent": "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "[TODO]"
   },
   "repository": {
     "type": "git",
