--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "huben",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Huben is a supporter to operate Github PR and issue in your terminal.",
   "main": "src/index.js",
   "dependencies": {
     "chalk": "^1.1.3",
@@ -13,9 +13,12 @@
     "parse-git-config": "^0.4.2",
     "superagent": "^2.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^2.13.1"
+  },
   "scripts": {
-    "test": "[TODO]"
+    "test": "echo [TODO]",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
